<resources>
    <string name="app_name">DrawScan</string>
    <string name="descripcionImagenLogo">Esta imagen es el logo de la aplicación.</string>
    <string name="iniciarSesionGoogle">Iniciar sesión con Google</string>
    <string name="cerrarSesionGoogle">Cerrar sesión de Google</string>
    <string name="textoModoOscuro">Modo oscuro</string>
    <string name="textoAlertaInicial">Alerta inicial</string>
    <string name="tituloDialogo">Cerrar sesión</string>
    <string name="mensajeDialogo">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="botonNegativoDialogo">No</string>
    <string name="botonPositivoDialogo">Si</string>
    <string name="textoSesionCerrada">Se ha cerrado la sesión</string>
    <string name="fechaConcreta">Fecha : </string>
    <string name="porcentajeExacto">Porcentaje similitud : </string>
    <string name="descripcionFotoRealizada">Esta imagen es la recogida de la foto que el usuario ha realizado.</string>
    <string name="textoFotoCapturada">Capturando...</string>
    <string name="tituloEscaner">Error</string>
    <string name="mensajeEscaner">No se ha podido realizar bien el calculo. Intentelo de nuevo con una nueva foto</string>
    <string name="botonOK">OK</string>
    <string name="editTextTituloFoto">Introduce titulo para la foto.</string>
    <string name="tituloAlerta">Introduce un título</string>
    <string name="opcionAceptarDialogo">Aceptar</string>
    <string name="opcionCancelarDialogo">Cancelar</string>
    <string name="descripcionDialogo">Introduce un título para tu comparación de fotos, no puede tener mas de 10 caracteres.</string>
    <string name="errorDialogoVacio">Este campo no puede estar vacio</string>
    <string name="errorDialogoMax10">No puede ser mas de 10 caracteres</string>
    <string name="tituloPopUp">¡IMPORTANTE!</string>
    <string name="mensajePopUp">Para que la aplicación saque una similitud más precisa, debes de realizar las dos fotos entre la referencia que has buscado y tu dibujo que has realizado.\n Ya que si haces dos fotos que no tengan ningun tipo de relación entre si, el resultado sera indiferente.</string>
    <string name="comprendidoPopUp">Entendido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
