<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idConstAjustes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mi_fondo_animado"
    tools:context=".fragmentos.FragmentAjustes">

    <Button
        android:id="@+id/botonCerrarSesion"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/boton_redondo"
        android:drawableEnd="@drawable/icono_exit"
        android:shadowRadius="15.0"
        android:text="@string/cerrarSesionGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swModoOscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textoModoOscuro"
        app:layout_constraintBottom_toTopOf="@+id/swAlertaInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swAlertaInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textoAlertaInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swModoOscuro" />


</androidx.constraintlayout.widget.ConstraintLayout>