<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">
    <ImageView
        android:id="@+id/cerrarPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icono_cancelar"
        android:layout_marginTop="7dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/tituloPopup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="@string/tituloPopUp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/icono_alerta_popup"/>
                <TextView
                    android:id="@+id/mensajePopup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:text="@string/mensajePopUp"/>
                <Button
                    android:id="@+id/botonEntendidoPopup"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/comprendidoPopUp"
                    android:textColor="@color/colorNegro"
                    android:background="@drawable/boton_redondo_dialogo_aceptar"
                    android:layout_gravity="center"/>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>







</RelativeLayout>